# transverse-linearization-feedback-controller

./: .gitignore  README.md  pyproject.toml  trasnverse_basis.sublime-workspace  update.sh
doc/: transverse_basis.lyx  transverse_basis_2.lyx
src/: animate.py  bsplinesx.py  construct_basis.py  lqr.py  main.py  make_trajectory.py  rotmat.py  rotmat.py3  rotmat_sqrt.py3  serdict.py  simulator.py  test_integrate_basis.py  test_ldu_decompose.py  test_symbols.py  test_symbols.py3  trajectory.py  transverse_basis.py  transverse_basis.py3  transverse_feedback.py  transverse_linearization.py
src/car_trailers/: anim.py  dynamics.py
src/car_trailers_demo/: main.py
src/car_trailers_traj_planner/: planner.py  trajectory.py
src/common/: trajectory.py
src/tests/: test_construct_basis.py
src/transverse_linearization/: construct_basis.py  transverse_feedback.py  transverse_linearization.py
