[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
  "wheel",
  "tk",
]
build-backend = "setuptools.build_meta"

[project]
name = "transverse-linearization-demo"
version = "0.0.1"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "casadi"
]
requires-python = ">=3.10"
authors = [
  {name = "Maksim Surov", email = "surov.m.o@gmail.com"}
]
maintainers = [
  {name = "Maksim Surov", email = "surov.m.o@gmail.com"}
]
description = "The project demonstrates the transverse linearization approach in the problem of trajectory tracking"
readme = "readme.md"
license = {text = "GNU"}
keywords = ["control-system"]

[project.scripts]
run_demo = "car_trailers_demo.main:main"
